plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.smunity'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Slf4j
    implementation 'org.slf4j:slf4j-api:2.0.7'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger
    // http://localhost:8080/swagger-ui/index.html#/
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.0.4'

    // Jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Redis
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '3.2.0'
    implementation 'org.springframework.session:spring-session-data-redis:3.1.1'

    // Auth
    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'org.json:json:20240205'

    implementation 'com.google.guava:guava:30.1-jre'
}

tasks.named('test') {
    useJUnitPlatform()
}
